--- a/microfinance-Backend/package.json
+++ b/microfinance-Backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
+    "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -17,7 +17,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1",
+    "mongoose": "^8.9.5",
+    "nodemailer": "^6.10.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
