--- a/saylani-microfinance-frontend/package.json
+++ b/saylani-microfinance-frontend/package.json
@@ -1,7 +1,13 @@
 {
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
+    "@tailwindcss/vite": "^4.0.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "react-router-dom": "^7.1.3",
     "redux": "^5.0.1",
@@ -13,6 +19,7 @@
   "main": "eslint.config.js",
   "type": "module",
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "nodemon": "^3.1.9"
   },
   "scripts": {
