--- a/saylani-microfinance-frontend/package.json
+++ b/saylani-microfinance-frontend/package.json
@@ -1,17 +1,15 @@
 {
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.0",
-    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "postcss": "^8.5.1",
     "react-router-dom": "^7.1.3",
-    "redux": "^5.0.1",
-    "tailwindcss": "^4.0.0"
+    "redux": "^5.0.1"
   },
   "name": "frontend",
   "version": "1.0.0",
@@ -20,11 +18,14 @@
   "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "nodemon": "^3.1.9"
+    "autoprefixer": "^10.4.20",
+    "nodemon": "^3.1.9",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
