--- a/saylani-microfinance-frontend/package.json
+++ b/saylani-microfinance-frontend/package.json
@@ -19,13 +19,16 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "autoprefixer": "^10.4.20",
-    "nodemon": "^3.1.9",
+    "daisyui": "^4.12.23",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
+    "vite": "^6.0.11"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
